# dash-infer

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  README_CN.md  build.sh  link.map  link_python.map  link_with_proto.map
HIE-DNN/: .gitignore  CMakeLists.txt  README.md
HIE-DNN/cmake/: CppLint.cmake  CudaSetArch.cmake  Doxygen.cmake  FindCudart.cmake
HIE-DNN/dnn/: tensor_desc.cpp
HIE-DNN/dnn/cpp/: CMakeLists.txt  cast.cpp  expand.cpp  hiednn_cpp.cpp  set_tensor_value.cpp  unary_elementwise.cpp
HIE-DNN/dnn/cuda/: CMakeLists.txt  binary_elementwise.cu  cast.cu  concat.cu  expand.cu  gather_elements.cu  hiednn_cuda.cu  non_zero.cu  scatter_elements.cu  scatter_nd.cu  set_tensor_value.cu  slice.cu  trilu.cu  unary_elementwise.cu  where.cu
HIE-DNN/dnn/include/: cmath_wrapper.hpp  conv_desc.hpp  datatype_dispatch.hpp  device_function_modifier.hpp  integer_divmod.hpp  kahan_acc.hpp  packed_memory_access.hpp  scalar_functor.hpp  tensor_desc.hpp  utils.hpp
HIE-DNN/doc/: Doxyfile.in
HIE-DNN/example/: CMakeLists.txt
HIE-DNN/example/01_cpp/: 01_unary_elementwise.cpp  CMakeLists.txt
HIE-DNN/example/02_cuda/: 01_unary_elementwise.cu  02_binary_elementwise.cu  03_cast.cu  04_expand.cu  05_set_tensor_value.cu  06_scatter_nd.cu  07_prefix_sum.cu  08_reduce.cu  09_slice.cu  10_linear_interpolation.cu  11_nearest_interpolation.cu  12_pad.cu  13_gather_elements.cu  14_trilu.cu  15_where.cu  16_scatter_elements.cu  17_non_zero.cu  18_concat.cu  CMakeLists.txt
HIE-DNN/include/: hiednn.h  hiednn_cpp.h  hiednn_cuda.h
HIE-DNN/test/: CMakeLists.txt
HIE-DNN/test/cpp/: CMakeLists.txt  cast_utest.cpp  expand_utest.cpp  main.cpp  set_tensor_utest.cpp  unary_elementwise_utest.cpp
HIE-DNN/test/cuda/: CMakeLists.txt  binary_elementwise_utest.cu  cast_utest.cu  concat_utest.cu  cubic_interpolation_utest.cu  expand_utest.cu  gather_elements_utest.cu  linear_interpolation_utest.cu  main.cu  nearest_interpolation_utest.cu  non_zero_utest.cu  pad_utest.cu  prefix_sum_utest.cu  reduce_utest.cu  scatter_elements_utest.cu  scatter_nd_utest.cu  set_tensor_utest.cu  slice_utest.cu  trilu_utest.cu  type_conversion_utest.cu  unary_elementwise_utest.cu  where_utest.cu
HIE-DNN/test/datatype_extension/: CMakeLists.txt  datatype_extension_test.cpp
HIE-DNN/test/include/: utest_utils.hpp
csrc/: CMakeLists.txt
csrc/common/: allocator.h  as_engine.cpp  as_engine.h  as_engine_decode.cpp  as_engine_prefill.cpp  as_param_check.hpp  bfloat16_cmath_impl.hpp  bfloat16_impl.hpp  block.h  block_allocator.h  block_impl.h  common.h  device_context.h  engine_control_message.h  engine_runtime.h  engine_worker.cpp  engine_worker.h  env_config.h  extra_embedding.hpp  float16.h  generate_context.h  memory_reuser.cpp  memory_reuser.h  multi_media_info.cpp  request.h  result_queue.cpp  thread_pool.h  thread_pool_with_id.h  thread_utils.h  threading.h
csrc/core/kernel/: CMakeLists.txt  README.md  kernel.h
csrc/core/model/: model.cpp  model.h
csrc/core/operator/: operator.cpp  operator.h
csrc/core/tensor/: cache_memory.h  data.cpp  data.h  shape.cpp  tensor.cpp  tensor.h  tensor_utils.cpp
csrc/device/: bfc_allocator.cpp  bfc_allocator.h  cache_allocator.h  device_context_factory.cpp  memory_func.cpp  memory_func.h
csrc/device/cpu/: cpu_allocator.h  cpu_context.cpp  cpu_context.h  cpu_info.h  mpi_utils.hpp
csrc/device/cuda/: cuda_allocator.h  cuda_cache_allocator.cpp  cuda_cache_allocator.h  cuda_context.cpp  cuda_context.h  cuda_host_allocator.h  gpu_profiler.h  gpuinfo.cu  gpuinfo.h  nccl_utils.hpp
csrc/interface/: allspark.h  allspark_check.cpp  allspark_check.h  dlpack.h
csrc/proto/: allspark.proto  allspark_service.proto
csrc/runtime/: allspark_check.cpp
csrc/runtime/cache/: frame_manager.cpp  frame_manager.h  prefix_cache_manager.cpp  prefix_cache_manager.h  prefix_cache_manager_member.hpp  prefix_cache_manager_private.cpp  span_cache_config.cpp  span_manager.cpp  span_manager.h  virtual_cache.cpp  virtual_cache.h
csrc/runtime/coodinator/: worker_coodinator.cpp  worker_coodinator.h
csrc/runtime/state/: model_control_state.cpp
csrc/runtime/weight/: weight_loader.cpp  weight_loader.h  weight_manager.cpp  weight_manager.h  weight_manager_lora.cpp  weight_manager_lora.h  weight_saver.cpp  weight_saver.h  weight_splitter.cpp
csrc/service/: CMakeLists.txt  allspark_client.cpp  allspark_client.h  allspark_client_impl.cpp  allspark_client_impl.h  allspark_service.cpp  allspark_service_helper.h  allspark_service_parallel.cpp  allspark_service_parallel.h
csrc/utility/: allspark_logging.cpp  allspark_logging.h  allsparkz_util.cpp  allsparkz_util.h  arbiter.cpp  arbiter.h  blockingconcurrentqueue.h  check.h  check_cuda.h  cnpy.cpp  cnpy.h  concurrentqueue.h  datatype_dispatcher.h  file_util.cpp  file_util.h  format_enforcer.cpp  format_enforcer.h  lightweightsemaphore.h  mem_registry.cpp  mem_registry.h  model_profiler.cpp  model_profiler.h  mutex_wrapper.h  npz_util.cpp  npz_util.h  progress_bar.hpp  sparse_util.cpp  sparse_util.h  string_util.cpp  string_util.h  timer.h  uuid.cpp  uuid.h
examples/cpp/: CMakeLists.txt
examples/cpp/0_basic/: example_qwen.cpp
examples/cpp/1_apiserver/: apiserver.cpp  example_request.json
examples/cpp/tokenizer/: base64.cpp  base64.h  tokenizer.cpp  tokenizer.h
examples/cpp/utils/: CLI11.hpp  misc.hpp
python/: CMakeLists.txt  allspark_binding.cpp  allspark_binding_common.h  allspark_client_binding.cpp  dashinfer  dev-requirements.txt  requirements_deploy.txt  requirements_dev.txt  requirements_dev_cpu.txt  requirements_dev_cuda.txt  setup.py
python/dashinfer/allspark/: __init__.py  arbiter_fileclient.py  engine.py  quantization.py
python/dashinfer/helper/: __init__.py  helper.py
python/pyhie/allspark/: __init__.py  client.py  engine.py  (+9 more)
span-attention/: .clang-format  .gitignore  CMakeLists.txt  README.md
span-attention/src/: CMakeLists.txt
span-attention/test/: CMakeLists.txt  check_cuda.h  common.hpp  test_common.h  test_main.cpp
tests/cpp/: CMakeLists.txt  test_common.cpp  test_common.h.in
(+850 files in other folders)
